--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -49,4 +49,13 @@
 		android:src="@drawable/btn_next"
 		android:background="#00000000"
 	/>
+	<android.widget.ProgressBar
+		android:id="@+id/progress_bar"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:paddingBottom="5dp"
+		android:paddingTop="5dp"
+		android:layout_centerInParent="true"
+		android:visibility="invisible"
+	/>
 </RelativeLayout>
