--- a/res/menu/menu.xml
+++ b/res/menu/menu.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
+	<item android:id="@+id/menu_refresh"
+		android:title="@string/label_refresh"
+		android:icon="@drawable/ic_menu_refresh" />
 	<item android:id="@+id/menu_select_place"
 		android:title="@string/label_select_place"
 		android:icon="@android:drawable/ic_menu_add" />
