--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -15,6 +15,9 @@
 	   	android:layout_height="wrap_content"
 	   	android:layout_alignParentBottom="true"
 	   	android:layout_alignParentLeft="true"
+		android:paddingBottom="4dp"
+		android:paddingLeft="6dp"
+		android:paddingRight="6dp"
 	   	android:src="@drawable/btn_prev"
 	   	android:background="#00000000"
 	/>
@@ -46,6 +49,9 @@
 		android:layout_height="wrap_content"
 		android:layout_alignParentBottom="true"
 		android:layout_alignParentRight="true"
+		android:paddingBottom="4dp"
+		android:paddingLeft="6dp"
+		android:paddingRight="6dp"
 		android:src="@drawable/btn_next"
 		android:background="#00000000"
 	/>
