--- a/res/menu/menu.xml
+++ b/res/menu/menu.xml
@@ -9,4 +9,7 @@
    <item android:id="@+id/menu_settings"
 		android:title="@string/label_settings"
 		android:icon="@android:drawable/ic_menu_manage" />
+   <item android:id="@+id/menu_about"
+	   android:title="@string/label_about"
+	   android:icon="@android:drawable/ic_menu_info_details" />
 </menu>
