--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -79,13 +79,12 @@
 		android:layout_marginTop="10dp"
 		android:visibility="invisible"
 	/>
-	<android.widget.ProgressBar
+	<ProgressBar
 		android:id="@+id/progress_bar"
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
-		android:paddingBottom="5dp"
-		android:paddingTop="5dp"
+		android:layout_width="80dp"
+		android:layout_height="80dp"
 		android:layout_centerInParent="true"
+		android:indeterminateDrawable="@drawable/progress_medium"
 		android:visibility="invisible"
 	/>
 </RelativeLayout>
