--- a/res/layout/reservation_booked_item.xml
+++ b/res/layout/reservation_booked_item.xml
@@ -28,7 +28,6 @@
 			android:layout_height="wrap_content"
 			android:textSize="18sp"
 			android:textColor="#000000"
-			android:autoLink="phone"
 		/>
 		<TextView
 			android:id="@+id/patient_phone"
@@ -46,6 +45,13 @@
 			android:textSize="14sp"
 			android:textColor="#000000"
 			android:text="Email: "
+		/>
+		<TextView
+			android:id="@+id/booked"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:textSize="15sp"
+			android:textColor="#000000"
 		/>
 	</LinearLayout>
 </LinearLayout>
