--- a/res/layout/reservation_booked_item.xml
+++ b/res/layout/reservation_booked_item.xml
@@ -30,6 +30,13 @@
 			android:textColor="#000000"
 		/>
 		<TextView
+			android:id="@+id/examination_kind"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:textSize="14sp"
+			android:textColor="#000000"
+		/>
+		<TextView
 			android:id="@+id/patient_phone"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
